# Personal_Clound_Server

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile  config.json
backend/src/: main.cpp
backend/src/controllers/: FilesCtrl.cc  FilesCtrl.h  HealthCtrl.cc  UploadCtrl.cc  UploadCtrl.h
backend/src/db/: Repo.cc
backend/src/db/migrations/: 001_init.sql
backend/src/plugins/: RepoPlugin.cc  RepoPlugin.h  S3ClientPlugin.cc  S3ClientPlugin.h
backend/src/services/: S3Client.cc  S3Client.h
deploy/: Caddyfile
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.tsx  FileDashboard.jsx  main.jsx  main.tsx
